Initialized the JavaFX main App
Initialized module Diary containing the main App and added preloader