@@ -24,6 +24,29 @@
             <artifactId>javafx-fxml</artifactId>
             <version>14</version>
         </dependency>
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.Geek8080</groupId>
+            <artifactId>Entities</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.Geek8080</groupId>
+            <artifactId>Services</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.Geek8080</groupId>
+            <artifactId>Utils</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -40,6 +63,32 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
+                    <options>
+                        <option> --add-opens </option>
+                        <option> javafx.graphics/javafx.css=ALL-UNNAMED </option>
+                        <option> --add-opens </option>
+                        <option> javafx.base / com.sun.javafx.runtime = ALL-UNNAMED </option>
+                        <option> --add-opens </option>
+                        <option> javafx.controls / com.sun.javafx.scene.control.behavior = ALL-UNNAMED </option>
+                        <option> --add-opens </option>
+                        <option> javafx.controls / com.sun.javafx.scene.control = ALL-UNNAMED </option>
+                        <option> --add-opens </option>
+                        <option> javafx.base / com.sun.javafx.binding = ALL-UNNAMED </option>
+                        <option> --add-opens </option>
+                        <option> javafx.base / com.sun.javafx.event = ALL-UNNAMED </option>
+                        <option> --add-opens </option>
+                        <option> javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED </option>
+                        <option> --add-exports </option>
+                        <option> javafx.controls / com.sun.javafx.scene.control.behavior = com.jfoenix </option>
+                        <option> --add-exports </option>
+                        <option> javafx.controls / com.sun.javafx.scene.control = com.jfoenix </option>
+                        <option> --add-exports </option>
+                        <option> javafx.base / com.sun.javafx.binding = com.jfoenix </option>
+                        <option> --add-exports </option>
+                        <option> javafx.graphics/com.sun.javafx.stage=com.jfoenix </option>
+                        <option> --add-exports </option>
+                        <option> javafx.base / com.sun.javafx.event = com.jfoenix </option>
+                    </options>
                     <mainClass>org.geek8080.journal.main.App</mainClass>
                 </configuration>
             </plugin>
